# core

./: Cargo.toml  README.md  Settings.yaml  typeshare.toml
apps/api/: Cargo.toml
apps/api/src/: main.rs
apps/daemon/: Cargo.toml
apps/daemon/src/: main.rs
apps/dynode/: chains.yml  config.yml
apps/dynode/src/: webhook.rs
crates/cacher/src/: keys.rs
crates/chain_traits/src/: lib.rs
crates/gem_algorand/: Cargo.toml
crates/gem_algorand/src/: address.rs  lib.rs
crates/gem_aptos/src/: address.rs  lib.rs
crates/gem_bitcoin/: Cargo.toml
crates/gem_cardano/src/: lib.rs  planner.rs
crates/gem_client/src/: lib.rs  testkit.rs
crates/gem_cosmos/src/: address.rs  lib.rs
crates/gem_evm/: Cargo.toml
crates/gem_evm/src/: address.rs  lib.rs
crates/gem_evm/testdata/: mayan_native_swap_tx_receipt.json  mayan_token_swap_tx_receipt.json  (+5 more)
crates/gem_near/: Cargo.toml
crates/gem_polkadot/: Cargo.toml
crates/gem_solana/: Cargo.toml
crates/gem_sui/: Cargo.toml
crates/gem_ton/: Cargo.toml
crates/gem_tron/: Cargo.toml
crates/gem_tron/src/: lib.rs
crates/gem_tron/src/address/: mod.rs  serializer.rs
crates/gem_tron/src/models/: account.rs  contract.rs  contract_type.rs  mod.rs
crates/gem_tron/src/models/signing/: contract.rs  mod.rs  protobuf.rs  raw_data.rs  wallet_connect.rs
crates/gem_tron/src/provider/: address.rs  balances.rs  balances_mapper.rs  preload.rs  preload_mapper.rs  staking.rs  staking_mapper.rs  state.rs  token.rs  transaction_state_mapper.rs  transactions.rs  transactions_mapper.rs
crates/gem_tron/src/rpc/: client.rs
crates/gem_tron/src/rpc/trongrid/: mapper.rs
crates/gem_tron/src/signer/: chain_signer.rs  mod.rs  transaction.rs
crates/gem_tron/testdata/: block_mixed_contract_types.json  block_mixed_contract_types_receipts.json
crates/name_resolver/: Cargo.toml
crates/number_formatter/: Cargo.toml
crates/primitives/: Cargo.toml
crates/serde_serializers/: Cargo.toml
crates/settings_chain/: Cargo.toml
crates/streamer/: Cargo.toml
crates/swapper/: Cargo.toml
docs/: DEVICE_AUTHENTICATION.md  WALLET_AUTHENTICATION.md
gemstone/: Cargo.toml  justfile
gemstone/src/: address.rs  lib.rs  testkit.rs
skills/: swapper-checklist.md
(+411 files in other folders)
